# deepin-installer

./: CMakeLists.txt  README.md
i18n/: .deepin-installer-zh_CN.ts.swp  .deepin-installer.ts-bak.swp  .deepin-installer.ts.swp  CMakeLists.txt  deepin-installer-ady.ts  deepin-installer-af.ts  deepin-installer-am_ET.ts  deepin-installer-ar.ts  deepin-installer-ast.ts  deepin-installer-az.ts  deepin-installer-bg.ts  deepin-installer-bn.ts  deepin-installer-bo.ts  deepin-installer-bqi.ts  deepin-installer-br.ts  deepin-installer-ca.ts  deepin-installer-cs.ts  deepin-installer-da.ts  deepin-installer-de.ts  deepin-installer-el.ts  deepin-installer-en_AU.ts  deepin-installer-eo.ts  deepin-installer-es.ts  deepin-installer-et.ts  deepin-installer-fa.ts  deepin-installer-fi.ts  deepin-installer-fil.ts  deepin-installer-fr.ts  deepin-installer-gl_ES.ts  deepin-installer-he.ts  deepin-installer-hi_IN.ts  deepin-installer-hr.ts  deepin-installer-hu.ts  deepin-installer-hy.ts  deepin-installer-ia.ts  deepin-installer-id.ts  deepin-installer-it.ts  deepin-installer-ja.ts  deepin-installer-ka.ts  deepin-installer-km_KH.ts  (+85 more)
resources/: CMakeLists.txt  arm_default_settings.ini  armdefault_full_disk_policy.json  default_full_disk_policy.json  default_settings.ini  full_disk_policy.json  full_disk_policy_device.json  full_disk_policy_server.json  language_sort.json  languages.json  loongson_default_settings.ini  oem_settings.json  packages_choice.json  packages_default.json  packages_sort.json  professional_default_full_disk_policy.json  professional_default_settings.ini  sw_default_settings.ini
resources/licenses/: end-user-license-agreement-professional_bo_CN.txt  end-user-license-agreement-professional_en_US.txt  end-user-license-agreement-professional_ug_CN.txt  end-user-license-agreement-professional_zh_CN.txt  end-user-license-agreement-professional_zh_HK.txt  end-user-license-agreement-professional_zh_TW.txt  end-user-license-agreement-server_en_US.txt  end-user-license-agreement-server_zh_CN.txt  privacy-policy-community_en_US.txt  privacy-policy-community_zh_CN.txt  privacy-policy-professional_bo_CN.txt  privacy-policy-professional_en_US.txt  privacy-policy-professional_ug_CN.txt  privacy-policy-professional_zh_CN.txt  privacy-policy-professional_zh_HK.txt  privacy-policy-professional_zh_TW.txt  privacy-policy-server_en_US.txt  user-experience-agreement-professional_bo_CN.txt  user-experience-agreement-professional_en_US.txt  user-experience-agreement-professional_ug_CN.txt  user-experience-agreement-professional_zh_CN.txt  user-experience-agreement-professional_zh_HK.txt  user-experience-agreement-professional_zh_TW.txt
resources/platform_arm/: community.override  device.override  personal.override  professional.override  server.override
resources/platform_loongarch64/: community.override  device.override  professional.override  server.override
resources/platform_loongson/: community.override  device.override  personal.override  professional.full_disk_policy.json  professional.override  server.override
resources/platform_sw/: community.override  device.override  personal.override  professional.full_disk_policy.json  professional.override  server.override
resources/platform_x86/: community.override  device.override  personal.override  professional.override  server.override
resources/slide/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: command_execute_agent.cpp  deepin-installer-auto-install  deepin-installer-bases  deepin-installer-both  deepin-installer-cli-pkexec  deepin-installer-pkexec  deepin-installer-start  deepin-installer-systemd-pkexec  deepin-installer-xrandr  deepin_install_cli.cpp  deepin_installer.cpp  deepin_installer_first_boot.cpp  deepin_installer_init.cpp  deepin_installer_settings.cpp  deepin_installer_simpleini.cpp  setup_user_info.cpp
src/base/: auto_screen_scale.h  command.cpp  command.h  translator.h  utils.h
src/license/: deepin-end-user-experience-agreement_en_US.txt  deepin-end-user-experience-agreement_zh_CN.txt  deepin-end-user-license-agreement_community_en_US.txt  deepin-end-user-license-agreement_community_zh_CN.txt  deepin-end-user-license-agreement_zh_CN.txt  end-user-license-agreement-community_en_US.txt  end-user-license-agreement-community_zh_CN.txt  end-user-license-agreement-default_en_US.txt  end-user-license-agreement-default_zh_CN.txt  end-user-license-agreement-personal_en_US.txt  end-user-license-agreement-personal_zh_CN.txt  end-user-license-agreement-professional_en_US.txt  end-user-license-agreement-professional_zh_CN.txt  end-user-license-agreement-server_en_US.txt  end-user-license-agreement-server_zh_CN.txt  license.qrc  privacy-policy-community_en_US.txt  privacy-policy-community_zh_CN.txt  privacy-policy-personal_en_US.txt  privacy-policy-personal_zh_CN.txt  professional-deepin-end-user-license-agreement_en_US.txt  server-deepin-end-user-license-agreement_en_US.txt  user-experience-agreement-community_en_US.txt  user-experience-agreement-community_zh_CN.txt  user-experience-agreement-default_en_US.txt  user-experience-agreement-personal_en_US.txt  user-experience-agreement-professional_en_US.txt
src/oem/: oem_window.cpp
src/partman/: device.cpp  device.h  fs.cpp  fs.h  libparted_util.cpp  libparted_util_test.cpp  lv_partition.cpp  lv_partition.h  lvm_operation.cpp  lvm_operation.h  operation.cpp  operation.h  os_prober.cpp  partition.cpp  partition.h  partition_format.cpp  partition_format.h  partition_manager.cpp  partition_manager.h  structs.h  vg_device.cpp  vg_device.h
src/service/: first_boot_hook_worker.cpp  first_boot_hook_worker.h  hooks_manager.cpp  hooks_manager.h  language_manager.cpp  language_manager.h  log_manager.cpp  log_manager.h  multiscreenmanager.cpp  multiscreenmanager.h  password_manager.cpp  password_manager.h  power_manager.cpp  power_manager.h  pwquality_manager.cpp  pwquality_manager.h  screen_adaptation_manager.cpp  screen_adaptation_manager.h  settings_manager.cpp  settings_manager.h  settings_name.h
src/sysinfo/: csettings.cpp  csettings.h  keyboard.cpp  keyboard.h  timezone.cpp  (+13 more)
(+501 files in other folders)
